Corrigindo caminho dos arquivos no index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
    <head>
       <meta charset="UTF-8" />
       <title>JC - Desenvolvimento Web / Mobile / Desktop</title>
-      <link rel="stylesheet" type="text/css" href="/css/normalize.css" />
+      <link rel="stylesheet" type="text/css" href="./css/normalize.css" />
       <link
          href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
          rel="stylesheet"
          type="text/css" />
-      <link rel="stylesheet" type="text/css" href="/css/style.css" />
+      <link rel="stylesheet" type="text/css" href="./css/style.css" />
    </head>
 
    <body>
@@ -16,7 +16,7 @@
          <header>
             <h1>José Carlos Júnior</h1>
             <div class="ladoalado">
-               <img class="foto" src="img/foto.jpg" /><img class="fundo" src="img/fundo.jpg" />
+               <img class="foto" src="img/foto.jpg" /><img class="fundo" src="./img/fundo.jpg" />
             </div>
          </header>
       </div>
