Atualizado novamento o index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          <header>
             <h1>José Carlos Júnior</h1>
             <div class="ladoalado">
-               <img class="foto" src="img/foto.jpg" /><img class="fundo" src="./img/fundo.jpg" />
+               <img class="foto" src="./img/foto.jpg" /><img class="fundo" src="./img/fundo.jpg" />
             </div>
          </header>
       </div>
