--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
    <head>
       <meta charset="UTF-8" />
-      <title>JC - Desenvolvimento Web / Mobile / Desktop</title>
+      <title>(Web / Mobile / Desktop) Developer</title>
       <link rel="stylesheet" type="text/css" href="./css/normalize.css" />
       <!--<link
          href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
@@ -31,11 +31,22 @@
             <li class="nav-item"><a href="#" class="nav-link">Certificados</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Habilidades</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Redes Sociais</a></li>
            </ul>
          </header>
        </div>
 
+       <div class="container ">
+         <div class="row justify-content-center">
+            <div class="col">
+               <h1>Sejam bem vindos</h1>
+            </div>
+         </div>
+         
 
+       <div>
+         <p class="h1">Sejam bem vindos</p>
+       </div>
      
       <div class="header">
          <header>
