Adicionado menu no index2.html

--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,12 @@
       <!-- Required meta tags -->
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta name="description" content="Portifólio pessoal de José Carlos Desenvolvedor WEB, Mobile e Desktop" />
+      <meta
+         name="keywords"
+         content="Portifólio, programador, programação, desenvolvedore web, desenvolvedor mobile, desenvolvedor desktop" />
+      <meta name="robots" content="index, follow" />
+      <meta name="author" content="José Carlos Júnior" />
 
       <!-- Bootstrap CSS -->
       <link
@@ -20,7 +26,19 @@
    </head>
 
    <body>
-      <h1>Hello, world!</h1>
+      <div class="container">
+         <header class="d-flex justify-content-center py-3 border-bottom">
+            <ul class="nav nav-pills">
+               <li class="nav-item"><a href="#" class="nav-link" aria-current="page">Home</a></li>
+               <li class="nav-item"><a href="#" class="nav-link">Formação</a></li>
+               <li class="nav-item"><a href="#" class="nav-link">Conhecimentos</a></li>
+               <li class="nav-item"><a href="#" class="nav-link">Certificados</a></li>
+               <li class="nav-item"><a href="#" class="nav-link">Habilidades</a></li>
+               <li class="nav-item"><a href="#" class="nav-link">Redes Sociais</a></li>
+               <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
+            </ul>
+         </header>
+      </div>
 
       <!-- Optional JavaScript -->
       <script
